# nixmate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  flake.nix
.github/workflows/: ci.yml
docs/: README.md  SECURITY.md
docs/developer/: ADDING_MODULES.md  ADDING_PATTERNS.md  ADDING_THEMES.md  ARCHITECTURE.md  CONTRIBUTING.md  TRANSLATIONS.md
docs/user/: AI_SETUP.md  CONFIGURATION.md  KEYBINDINGS.md  PIPE_MODE.md  TROUBLESHOOTING.md
src/: app.rs  config.rs  i18n.rs  main.rs  types.rs
src/modules/: generations.rs  mod.rs  splash.rs
src/modules/config_showcase/: diagram.rs  mod.rs  poster.rs
src/modules/errors/: ai.rs  matcher.rs  mod.rs  patterns.rs  patterns_i18n.rs
src/modules/flake_inputs/: mod.rs
src/modules/health/: mod.rs
src/modules/options/: mod.rs
src/modules/rebuild/: mod.rs
src/modules/services/: mod.rs
src/modules/storage/: mod.rs
src/nix/: commands.rs  detect.rs  generations.rs  mod.rs  packages.rs  services.rs  storage.rs  sysinfo.rs
src/ui/: mod.rs  render.rs  theme.rs  widgets.rs
