[package]
name = "nixmate"
version = "0.7.1"
edition = "2021"
authors = ["daskladas"]
description = "NixOS Multi-Tool – All your Nix utilities in one TUI"
license = "MIT"
repository = "https://github.com/daskladas/nixmate"
keywords = ["nixos", "nix", "tui", "multitool", "home-manager"]
categories = ["command-line-utilities"]

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"

# Pattern matching (error translator)
regex = "1"
once_cell = "1"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Directory paths
dirs = "5"

# Unix syscalls (stdin reattach for pipe support)
libc = "0.2"

# HTTP client (AI fallback — blocking, used in background thread)
ureq = "2.9"

# Image loading (splash screen mascot rendering)
image = { version = "0.24", default-features = false, features = ["png"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
